[project]
name = "brambackdoor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clipboard>=0.0.4",
    "mss>=10.1.0",
    "opencv-python>=4.12.0.88",
    "pyaescrypt>=6.1.1",
    "pyttsx3>=2.99",
    "secure-delete>=0.0.2",
    "telebot>=0.0.5",
]
