[project]
name = "kdewebhelper"
version = "1.0.0"
authors = [
  { name="Caspian", email="caspiansk8@gmail.com" },
]
description = "KDE Web Helper is a tool to assist with web development in the KDE environment."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/caspia-n/"
Issues = "https://github.com/pypa/sampleproject/issues"